# voice_parkinson_database

./: pyproject.toml
analysis_notebooks/: 01-bibliographical_study.ipynb  02-databses_study.ipynb  03-modeling_study.ipynb  04-feat_extraction_study.ipynb  05-feat_selection_study.ipynb  06-scaling_study.ipynb  07-algorithm_study.ipynb  08-algorithm_selection.ipynb  09-dim_reduction_study.ipynb  10-metrics_study.ipynb
data/: pd_review.studies.json
data/new_documents/: 2020_10.1007_978-3-030-31129-2_15_1.json  2020_10.1007_s11517-020-02250-5_1.json  2020_10.1007_s11517-020-02250-5_2.json  2020_10.1007_s13534-020-00156-7_1.json  2020_10.1016_j.csl.2019.101047_1.json  2020_10.1016_j.csl.2019.101047_2.json  2020_10.1016_j.csl.2019.101047_3.json  2020_10.1016_j.eswa.2020.113562.json  2020_10.1016_j.eswa.2020.113562_1.json  2020_10.1016_j.neucom.2020.03.058_2.json  2020_10.1016_j.procs.2020.08.013.json  2020_10.2196_18689_3.json  2021_10.1016_j.compbiomed.2021.104503_1.json  2021_10.1016_j.dsx.2021.102331_1.json  2021_10.1109_ACCESS.2021.3057715_2.json  2022_10.1016_j.bbe.2022.04.003_1.json  2022_10.1016_j.eswa.2022.117483_1.json  2022_10.1016_j.jvoice.2020.06.004_1.json  2022_10.1155_2022_2793361_1.json  2022_10.1155_2022_5524852_1.json  2022_10.3389_fneur.2022.831428_2.json  2023_10.1007_s11042-023-14932-x_1.json  2023_10.1016_j.compbiolchem.2022.107788_1.json  2023_10.1016_j.csl.2023.101536_2.json  2023_10.1016_j.future.2023.05.012_1.json  (+12 more)
db_notebooks/: 01-split_json.ipynb  02-create_mongo_db.ipynb  split_json.ipynb
voice_db/: import_studies.py
(+349 files in other folders)
