[project]
name = "voice-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Giraldo",email = "luisggon@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.15.4,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
